--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -425,12 +425,13 @@
         <div class="uq-grid">
           <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
             <div class="uq-card">
-              <div class="uq-card__image__wrapper">
+              <a class="uq-card__link" href="#">Card title</a>
+              <div class="uq-card__image-wrapper">
                 <div class="uq-card__image">
-                  <img src="http://lorempixel.com/500/350" alt="Card image description">
+                  <img src="https://design-system.uq.edu.au/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
                 </div>
               </div>
-              <div class="uq-card__content__wrapper">
+              <div class="uq-card__content-wrapper">
                 <div class="uq-card__content">
                   <div class="uq-card__header">
                     <h3 class="uq-card__title">Card title</h3>
@@ -438,21 +439,19 @@
                   <div class="uq-card__body">
                       <p>Card summary text</p>
                   </div>
-                </div>
-                <div class="uq-card__actions">
-                  <a class="text--link" href="#">Learn more</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
             <div class="uq-card">
-              <div class="uq-card__image__wrapper">
+              <a class="uq-card__link" href="#">Card title</a>
+              <div class="uq-card__image-wrapper">
                 <div class="uq-card__image">
-                  <img src="http://lorempixel.com/500/350" alt="Card image description">
+                  <img src="https://design-system.uq.edu.au/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
                 </div>
               </div>
-              <div class="uq-card__content__wrapper">
+              <div class="uq-card__content-wrapper">
                 <div class="uq-card__content">
                   <div class="uq-card__header">
                     <h3 class="uq-card__title">Card title</h3>
@@ -460,21 +459,19 @@
                   <div class="uq-card__body">
                       <p>Card summary text</p>
                   </div>
-                </div>
-                <div class="uq-card__actions">
-                  <a class="text--link" href="#">Learn more</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
             <div class="uq-card">
-              <div class="uq-card__image__wrapper">
+              <a class="uq-card__link" href="#">Card title</a>
+              <div class="uq-card__image-wrapper">
                 <div class="uq-card__image">
-                  <img src="http://lorempixel.com/500/350" alt="Card image description">
+                  <img src="https://design-system.uq.edu.au/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
                 </div>
               </div>
-              <div class="uq-card__content__wrapper">
+              <div class="uq-card__content-wrapper">
                 <div class="uq-card__content">
                   <div class="uq-card__header">
                     <h3 class="uq-card__title">Card title</h3>
@@ -482,21 +479,19 @@
                   <div class="uq-card__body">
                       <p>Card summary text</p>
                   </div>
-                </div>
-                <div class="uq-card__actions">
-                  <a class="text--link" href="#">Learn more</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
             <div class="uq-card">
-              <div class="uq-card__image__wrapper">
+              <a class="uq-card__link" href="#">Card title</a>
+              <div class="uq-card__image-wrapper">
                 <div class="uq-card__image">
-                  <img src="http://lorempixel.com/500/350" alt="Card image description">
+                  <img src="https://design-system.uq.edu.au/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
                 </div>
               </div>
-              <div class="uq-card__content__wrapper">
+              <div class="uq-card__content-wrapper">
                 <div class="uq-card__content">
                   <div class="uq-card__header">
                     <h3 class="uq-card__title">Card title</h3>
@@ -504,9 +499,6 @@
                   <div class="uq-card__body">
                       <p>Card summary text</p>
                   </div>
-                </div>
-                <div class="uq-card__actions">
-                  <a class="text--link" href="#">Learn more</a>
                 </div>
               </div>
             </div>
@@ -520,12 +512,12 @@
       <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
         <div class="uq-card uq-card--story">
           <a class="uq-card__link" href="#">Card title</a>
-          <div class="uq-card__image__wrapper">
+          <div class="uq-card__image-wrapper">
             <div class="uq-card__image">
-              <img src="http://lorempixel.com/500/350" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-gatton-campus.jpg" alt="Card image description">
             </div>
           </div>
-          <div class="uq-card__content__wrapper">
+          <div class="uq-card__content-wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
                 <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
@@ -541,12 +533,12 @@
       <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
         <div class="uq-card uq-card--story">
           <a class="uq-card__link" href="#">Card title</a>
-          <div class="uq-card__image__wrapper">
+          <div class="uq-card__image-wrapper">
             <div class="uq-card__image">
-              <img src="http://lorempixel.com/500/350" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-gatton-campus.jpg" alt="Card image description">
             </div>
           </div>
-          <div class="uq-card__content__wrapper">
+          <div class="uq-card__content-wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
                 <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
@@ -562,12 +554,12 @@
       <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
         <div class="uq-card uq-card--story">
           <a class="uq-card__link" href="#">Card title</a>
-          <div class="uq-card__image__wrapper">
+          <div class="uq-card__image-wrapper">
             <div class="uq-card__image">
-              <img src="http://lorempixel.com/500/350" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-gatton-campus.jpg" alt="Card image description">
             </div>
           </div>
-          <div class="uq-card__content__wrapper">
+          <div class="uq-card__content-wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
                 <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
@@ -583,12 +575,12 @@
       <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
         <div class="uq-card uq-card--story">
           <a class="uq-card__link" href="#">Card title</a>
-          <div class="uq-card__image__wrapper">
+          <div class="uq-card__image-wrapper">
             <div class="uq-card__image">
-              <img src="http://lorempixel.com/500/350" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-gatton-campus.jpg" alt="Card image description">
             </div>
           </div>
-          <div class="uq-card__content__wrapper">
+          <div class="uq-card__content-wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
                 <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
@@ -610,12 +602,12 @@
       <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
         <div class="uq-card uq-card--event">
           <a class="uq-card__link" href="#">Card title</a>
-          <div class="uq-card__image__wrapper">
+          <div class="uq-card__image-wrapper">
             <div class="uq-card__image">
-              <img src="http://lorempixel.com/500/350" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-herston-campus.jpg" alt="Card image description">
             </div>
           </div>
-          <div class="uq-card__content__wrapper">
+          <div class="uq-card__content-wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
                 <p class="uq-card__title-super">DD MONTH</p>
@@ -631,12 +623,12 @@
       <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
         <div class="uq-card uq-card--event">
           <a class="uq-card__link" href="#">Card title</a>
-          <div class="uq-card__image__wrapper">
+          <div class="uq-card__image-wrapper">
             <div class="uq-card__image">
-              <img src="http://lorempixel.com/500/350" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-herston-campus.jpg" alt="Card image description">
             </div>
           </div>
-          <div class="uq-card__content__wrapper">
+          <div class="uq-card__content-wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
                 <p class="uq-card__title-super">DD MONTH</p>
@@ -652,12 +644,12 @@
       <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
         <div class="uq-card uq-card--event">
           <a class="uq-card__link" href="#">Card title</a>
-          <div class="uq-card__image__wrapper">
+          <div class="uq-card__image-wrapper">
             <div class="uq-card__image">
-              <img src="http://lorempixel.com/500/350" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-herston-campus.jpg" alt="Card image description">
             </div>
           </div>
-          <div class="uq-card__content__wrapper">
+          <div class="uq-card__content-wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
                 <p class="uq-card__title-super">DD MONTH</p>
@@ -673,12 +665,12 @@
       <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
         <div class="uq-card uq-card--event">
           <a class="uq-card__link" href="#">Card title</a>
-          <div class="uq-card__image__wrapper">
+          <div class="uq-card__image-wrapper">
             <div class="uq-card__image">
-              <img src="http://lorempixel.com/500/350" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-herston-campus.jpg" alt="Card image description">
             </div>
           </div>
-          <div class="uq-card__content__wrapper">
+          <div class="uq-card__content-wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
                 <p class="uq-card__title-super">DD MONTH</p>
