added previous-next component

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -844,6 +844,22 @@
     </div>
     <br/>
 
+    <div class="uq-grid">
+      <div class="uq-grid__col uq-grid__col--6">
+        <h2>Previous-next</h2>
+        <!-- Previous and Next buttons are visible -->  
+        <div class="uq-previous-next">
+          <div class="uq-previous-next__item">
+              <a href="#" class="uq-previous-next__link-previous">Enrolment basics <span class="uq-previous-next__description">Previous</span></a>
+          </div>
+
+          <div class="uq-previous-next__item">
+              <a href="#" class="uq-previous-next__link-next">How to enrol <span class="uq-previous-next__description">Next</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Sections -->
     <div class="uq-section">
       <div class="uq-section__container">
