added progression component

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -859,6 +859,68 @@
         </div>
       </div>
     </div>
+    <br/>
+
+    <div class="uq-grid">
+      <div class="uq-grid__col uq-grid__col--6">
+        <h2>Progression</h2>
+        <div class="uqds-progression-wrapper">
+          <ul class="uq-progression">
+              <li class="uq-progression__step is-complete">
+                  <div class="uq-progression__step-marker">
+                      <a class="uq-progression__link" href="#">
+                          <span class="uq-progression__step-number">1</span>
+                          <span class="uq-progression__step-label">Step 1</span>
+                      </a>
+                  </div>
+                  <div class="uq-progression__bar">&nbsp;</div>
+              </li>
+              <li class="uq-progression__step is-complete">
+                  <div class="uq-progression__step-marker">
+                      <a class="uq-progression__link" href="#">
+                          <span class="uq-progression__step-number">2</span>
+                          <span class="uq-progression__step-label">Step 2</span>
+                      </a>
+                  </div>
+                  <div class="uq-progression__bar">
+                      <ul class="uq-progression__sub-step">
+                          <li class="uq-progression__bar is-complete">&nbsp;</li>
+                          <li class="uq-progression__bar is-complete">&nbsp;</li>
+                          <li class="uq-progression__bar">&nbsp;</li>
+                      </ul>
+                  </div>
+              </li>
+              <li class="uq-progression__step">
+                  <div class="uq-progression__step-marker">
+                      <a class="uq-progression__link" href="#">
+                          <span class="uq-progression__step-number">3</span>
+                          <span class="uq-progression__step-label">Step 3</span>
+                      </a>
+                  </div>
+                  <div class="uq-progression__bar">
+                      <ul class="uq-progression__sub-step">
+                          <li class="uq-progression__bar">&nbsp;</li>
+                          <li class="uq-progression__bar">&nbsp;</li>
+                          <li class="uq-progression__bar">&nbsp;</li>
+                          <li class="uq-progression__bar">&nbsp;</li>
+                          <li class="uq-progression__bar">&nbsp;</li>
+                          <li class="uq-progression__bar">&nbsp;</li>
+                      </ul>
+                  </div>
+              </li>
+              <li class="uq-progression__step">
+                  <div class="uq-progression__step-marker">
+                      <a class="uq-progression__link" href="#">
+                          <span class="uq-progression__step-number">4</span>
+                          <span class="uq-progression__step-label">Step 4</span>
+                      </a>
+                  </div>
+              </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <br/>
 
     <!-- Sections -->
     <div class="uq-section">
