added loading spinner component

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -799,6 +799,38 @@
 
     <div class="uq-grid">
       <div class="uq-grid__col uq-grid__col--6">
+        <h2>Loading spinner</h2>
+        <div class="uq-loading-spinner" role="alert" aria-live="assertive">
+          <span>Loading...</span>
+        </div>
+      </div>
+    </div>
+    <br/>
+
+    <div class="uq-grid">
+      <div class="uq-grid__col uq-grid__col--6">
+        <h2>Pagination</h2>
+        <ul class="uq-pagination">
+          <li class="uq-pagination__item uq-pagination__item--go-first"><a class="uq-pagination__link" title="Go to first page" href="#">&laquo; first</a></li>
+          <li class="uq-pagination__item uq-pagination__item--go-previous"><a class="uq-pagination__link" title="Go to previous page" href="#">&lsaquo; prev</a></li>
+          <li class="uq-pagination__ellipsis uq-pagination__ellipsis--left">…</li>
+          <li class="uq-pagination__item"><a class="uq-pagination__link" title="Go to page 8" href="#">8</a></li>
+          <li class="uq-pagination__item"><a class="uq-pagination__link" title="Go to page 9" href="#">9</a></li>
+          <li class="uq-pagination__item"><a class="uq-pagination__link" title="Go to page 10" href="#">10</a></li>
+          <li class="uq-pagination__item uq-pagination__item--current"><a class="uq-pagination__link" title="Go to page 11" href="#">11</a></li>
+          <li class="uq-pagination__item"><a class="uq-pagination__link" title="Go to page 12" href="#">12</a></li>
+          <li class="uq-pagination__item"><a class="uq-pagination__link" title="Go to page 13" href="#">13</a></li>
+          <li class="uq-pagination__item"><a class="uq-pagination__link" title="Go to page 14" href="#">14</a></li>
+          <li class="uq-pagination__ellipsis uq-pagination__ellipsis--right">…</li>
+          <li class="uq-pagination__item uq-pagination__item--go-next"><a class="uq-pagination__link" title="Go to next page" href="#">next &rsaquo;</a></li>
+          <li class="uq-pagination__item uq-pagination__item--go-last"><a class="uq-pagination__link" title="Go to last page" href="#">last &raquo;</a></li>
+        </ul>
+      </div>
+    </div>
+    <br/>
+
+    <div class="uq-grid">
+      <div class="uq-grid__col uq-grid__col--6">
         <h2>Panes</h2>
         <div class="uq-pane">
           <h3 class="uq-pane__title">Pane title</h3>
@@ -852,7 +884,6 @@
           <div class="uq-previous-next__item">
               <a href="#" class="uq-previous-next__link-previous">Enrolment basics <span class="uq-previous-next__description">Previous</span></a>
           </div>
-
           <div class="uq-previous-next__item">
               <a href="#" class="uq-previous-next__link-next">How to enrol <span class="uq-previous-next__description">Next</span></a>
           </div>
