--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -1083,6 +1083,13 @@
     </div>
     <br/>
 
+    <!-- Print utilities -->
+    <div class="show-for-print">
+      <p>Show this element when printing</p>
+    </div>
+    <div class="hide-for-print">
+      <p>Hide this element when printing</p>
+    </div>
 
     <!-- footer --> 
     <footer class="uq-footer" data-gtm-category="Footer">
