update schema links from http to https

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -282,16 +282,16 @@
     <br/>
     <div class="uq-grid">
       <div class="uq-grid__col uq-grid__col--6">
-        <ol class="uq-breadcrumb" itemscope="" itemtype="http://schema.org/BreadcrumbList">
-          <li class="uq-breadcrumb__item uq-breadcrumb--home" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+        <ol class="uq-breadcrumb" itemscope="" itemtype="https://schema.org/BreadcrumbList">
+          <li class="uq-breadcrumb__item uq-breadcrumb--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
             <a class="uq-breadcrumb__link uq-breadcrumb__link--home" href="/">Home</a>
             <meta itemprop="position" content="1">
           </li>
-          <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+          <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
             <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services">Information and services</a>
             <meta itemprop="position" content="2">
           </li>
-          <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+          <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
             <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services/human-resources">Human resources for University of Queensland</a>
             <meta itemprop="position" content="3">
           </li>
