update kitchen sink and pdo html

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -79,7 +79,7 @@
                        uq-site-header__navigation__list-item--has-subnav
                        uq-site-header__navigation__list-item--active">
               <a href="/study" aria-expanded="false">Study</a>
-              <span class="uq-site-header__navigation__sub-toggle">Open</span>
+              <button class="uq-site-header__navigation__sub-toggle">Open</button>
               <ul class="uq-site-header__navigation__list
                          uq-site-header__navigation__list--level-2">
                 <li class="uq-site-header__navigation__list-item">
@@ -124,7 +124,7 @@
             <li class="uq-site-header__navigation__list-item
                        uq-site-header__navigation__list-item--has-subnav">
               <a href="/admissions" aria-expanded="false">Admissions</a>
-              <span class="uq-site-header__navigation__sub-toggle">Open</span>
+              <button class="uq-site-header__navigation__sub-toggle">Open</button>
               <ul class="uq-site-header__navigation__list 
                          uq-site-header__navigation__list--level-2">
                 <li class="uq-site-header__navigation__list-item">
@@ -156,7 +156,7 @@
             <li class="uq-site-header__navigation__list-item
                        uq-site-header__navigation__list-item--has-subnav">
               <a href="/university-life" aria-expanded="false">University life</a>
-              <span class="uq-site-header__navigation__sub-toggle">Open</span>
+              <button class="uq-site-header__navigation__sub-toggle">Open</button>
               <ul class="uq-site-header__navigation__list 
                          uq-site-header__navigation__list--level-2">
                 <li class="uq-site-header__navigation__list-item">
