--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -79,9 +79,9 @@
                        uq-site-header__navigation__list-item--has-subnav
                        uq-site-header__navigation__list-item--active">
               <a href="/study" aria-expanded="false">Study</a>
-              <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Study sub-menu</span></button>
+              <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Study sub-navigation</span></button>
               <ul class="uq-site-header__navigation__list
-                         uq-site-header__navigation__list--level-2">
+                         uq-site-header__navigation__list--level-2" aria-label="Study sub-navigation">
                 <li class="uq-site-header__navigation__list-item">
                   <a href="/study/programs" aria-expanded="false">Find a program</a>
                 </li>
@@ -124,9 +124,9 @@
             <li class="uq-site-header__navigation__list-item
                        uq-site-header__navigation__list-item--has-subnav">
               <a href="/admissions" aria-expanded="false">Admissions</a>
-              <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Admissions sub-menu</span></button>
+              <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Admissions sub-navigation</span></button>
               <ul class="uq-site-header__navigation__list 
-                         uq-site-header__navigation__list--level-2">
+                         uq-site-header__navigation__list--level-2" aria-label="Admissions sub-navigation">
                 <li class="uq-site-header__navigation__list-item">
                   <a href="/admissions/undergraduate" aria-expanded="false">Undergraduate</a>
                 </li>
@@ -156,9 +156,9 @@
             <li class="uq-site-header__navigation__list-item
                        uq-site-header__navigation__list-item--has-subnav">
               <a href="/university-life" aria-expanded="false">University life</a>
-              <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show University life sub-menu</span></button>
+              <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show University life sub-navigation</span></button>
               <ul class="uq-site-header__navigation__list 
-                         uq-site-header__navigation__list--level-2">
+                         uq-site-header__navigation__list--level-2" aria-label="University life sub-navigation">
                 <li class="uq-site-header__navigation__list-item">
                   <a href="/university-life/living-in-brisbane" aria-expanded="false">Living in Brisbane</a>
                 </li>
