--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -57,8 +57,8 @@
       </div>
     </header>
 
+    <!-- Site header -->
     <div class="uq-site-header">
-
       <!-- Site title and utility area with mobile nav toggler (JS) -->
       <div class="uq-site-header__title-container">
         <div class="uq-site-header__title-container__left">
@@ -70,7 +70,7 @@
         </div>
       </div>
     
-      <!-- Navigation Menu  -->
+      <!-- Navigation menu  -->
       <div class="uq-site-header__navigation-container">
         <nav class="uq-site-header__navigation" id="jsNav">
           <ul class="uq-site-header__navigation__list
