--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -324,27 +324,15 @@
     <!-- blockquote -->
     <div class="uq-grid">
       <div class="uq-grid__col uq-grid__col--6">
-        <h2>Blockquotes</h2>
-        <section class="background-light">
-            <blockquote class="blockquote blockquote--dark blockquote--boxed">
-                <div class="blockquote__body">
-                    <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
-                </div>
-                <div class="blockquote__footer">
-                    <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
-                </div>
-            </blockquote>
-        </section>
-        <section class="background-light">
-            <blockquote class="blockquote blockquote--light blockquote--quotemark">
-                <div class="blockquote__body">
-                    <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
-                </div>
-                <div class="blockquote__footer">
-                    <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
-                </div>
-            </blockquote>
-        </section>
+        <h2>Blockquote</h2>
+        <figure class="blockquote">
+          <blockquote class="blockquote__body">
+              <p>Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re pierced.</p>
+          </blockquote>
+          <figcaption class="blockquote__footer">
+              —Aldous Huxley, <cite><a href="https://www.huxley.net/bnw/four.html" class="blockquote__link">Brave New World</a></cite>
+          </figcaption>
+        </figure>
       </div>
     </div>
     <br/>
