begin to add mobile grid column start and end, commented out for now. removed header on social media icons - check with CX

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -324,21 +324,21 @@
         </nav>
         <!-- Footer contact details -->
         <div class="new-footer__contact">
-          <div class="new-footer__contact-item">
+          <div class="new-footer__contact-item new-footer__contact-enquiries">
             <h2 class="new-footer__sub-title">Enquiries</h2>
             <p>Phone: <a href="tel:+61733651111" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Enquiries phone'});"><span itemprop="telephone">+61 7 3365 1111</span></a></p>
             <p><a href="https://uq.edu.au/contacts" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Contact directory'});">Contact directory</a></p>
           </div>   
-          <div class="new-footer__contact-item">
+          <div class="new-footer__contact-item new-footer__contact-emergency">
             <h2 class="new-footer__sub-title">Emergency</h2>
             <p>Phone: <a href="tel:+61733651111" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Emergency phone'});"><span itemprop="telephone">+61 7 3365 3333</span></a></p>
           </div>
-          <div class="new-footer__contact-item">
+          <div class="new-footer__contact-item new-footer__contact-security">
             <h2 class="new-footer__sub-title">UQ security</h2>
             <p>Phone: <a href="tel:+61733651111" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Emergency phone'});"><span itemprop="telephone">+61 7 3365 1234</span></a></p>
           </div>
-          <div class="new-footer__contact-item">
-            <h2 class="new-footer__sub-title">Social media links</h2>
+          <div class="new-footer__contact-item new-footer__contact-social">
+            <!-- <h2 class="new-footer__sub-title">Social media links</h2> -->
             <p class="new-footer__meta-icons">
               <a class="uq-icon uq-icon--social--social-email-circle uq-icon--light"></a> 
               <a class="uq-icon uq-icon--social--social-facebook-circle uq-icon--light"></a> 
