--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
-    <header class="uq-header">
+    <header class="uq-header new-header">
       <div class="uq-header__container">
         <div class="uq-header__logo">
           <a class="uq-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
