initial header setup and styles

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -10,7 +10,48 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
-    <header class="uq-header new-header">
+
+    <header class="new-header">
+      <div class="new-header__black">
+        <nav class="new-header__black-nav">
+          <ul class="new-header__black-nav-list">
+              <li class="new-header__black-nav-item">
+                  <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
+              </li>
+              <li class="new-header__black-nav-item">
+                  <a href="https://www.uq.edu.au/events/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
+              </li>
+              <li class="new-header__black-nav-item">
+                  <a href="https://alumni.uq.edu.au/giving/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
+              </li>
+              <li class="new-header__black-nav-item">
+                <a href="https://uq.edu.au/departments/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Directories'});">Directories</a>
+              </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="new-header__main">
+        <div class="new-header__main-container">
+          <div class="new-header__logo">
+            <a class="logo--large gtm-processed" href="https://www.uq.edu.au/">
+              <img alt="The University of Queensland" src="https://static.uq.net.au/v13/logos/corporate/uq-lockup-landscape--reversed.svg">
+            </a>
+          </div>
+          <div class="new-header__main-nav-conatainer">
+            <nav class="new-header__main-nav">
+              <ul>
+                <li><a href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a></li>
+                <li><a href="https://research.uq.edu.au/" class="gtm-processed">Research</a></li>
+                <li><a href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a></li>
+                <li><a href="https://about.uq.edu.au/" class="gtm-processed">About</a></li>
+              </ul>
+            </nav>
+            <button class="js-global-search-toggle header__search__toggle button button--icon-only icon--standard--search icon--white processed">Search</button>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- <header class="uq-header new-header">
       <div class="uq-header__container">
         <div class="uq-header__logo">
           <a class="uq-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
@@ -55,7 +96,7 @@
           </ul>
         </nav>
       </div>
-    </header>
+    </header> -->
 
     <!-- Site header -->
     <div class="uq-site-header">
