--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -12,44 +12,63 @@
   <body>
 
     <header class="new-header">
-      <div class="new-header__black">
-        <nav class="new-header__black-nav">
-          <ul class="new-header__black-nav-list">
-              <li class="new-header__black-nav-item">
-                  <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
-              </li>
-              <li class="new-header__black-nav-item">
-                  <a href="https://www.uq.edu.au/events/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
-              </li>
-              <li class="new-header__black-nav-item">
-                  <a href="https://alumni.uq.edu.au/giving/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
-              </li>
-              <li class="new-header__black-nav-item">
-                <a href="https://uq.edu.au/departments/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Directories'});">Directories</a>
-              </li>
-          </ul>
-        </nav>
-      </div>
+      
       <div class="new-header__main">
         <div class="new-header__main-container">
+          <button class="main-nav__toggle main-nav__menu-toggle"><span class="uq-icon uq-icon--standard--navigation-menu uq-icon--light"></span></button>
           <div class="new-header__logo">
             <a class="logo--large gtm-processed" href="https://www.uq.edu.au/">
-              <img alt="The University of Queensland" src="https://static.uq.net.au/v13/logos/corporate/uq-lockup-landscape--reversed.svg">
+              <img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg">
             </a>
           </div>
-          <div class="new-header__main-nav-conatainer">
-            <nav class="new-header__main-nav">
-              <ul>
-                <li><a href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a></li>
-                <li><a href="https://research.uq.edu.au/" class="gtm-processed">Research</a></li>
-                <li><a href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a></li>
-                <li><a href="https://about.uq.edu.au/" class="gtm-processed">About</a></li>
-              </ul>
-            </nav>
-            <button class="js-global-search-toggle header__search__toggle button button--icon-only icon--standard--search icon--white processed">Search</button>
-          </div>
+        </div>
+        <button class="main-nav__toggle main-nav__search-toggle"><span class="uq-icon uq-icon--standard--search uq-icon--light"></span></button>
         </div>
       </div>
+      <div class="new-header__main-nav-conatainer">
+        <nav class="new-header__main-nav">
+          <ul class="new-header__main-nav-list">
+            <li><a class="new-header__main-nav-link" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a>
+              <ul class="mega-menu">
+                <li><a class="new-header__main-nav-link" href="#">Overview</a></li>
+                <li><a class="new-header__main-nav-link" href="#">Study Areas</a>
+                  <ul>
+                    <li><a class="new-header__main-nav-link" href="#">Find a course or program</a></li>
+                    <li><a class="new-header__main-nav-link" href="#">Browse study areas</a></li>
+                    <li><a class="new-header__main-nav-link" href="#">Study</a></li>
+                    <li><a class="new-header__main-nav-link" href="#">Study</a></li>
+                    <li><a class="new-header__main-nav-link" href="#">How to apply</a></li>
+                  </ul>
+                </li>
+                <li><a class="new-header__main-nav-link" href="#">UQ life</a></li>
+                <li><a class="new-header__main-nav-link" href="#">Information for</a></li>
+              </ul>
+            </li>
+            <li><a class="new-header__main-nav-link" href="https://research.uq.edu.au/" class="gtm-processed">Research</a></li>
+            <li><a class="new-header__main-nav-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a></li>
+            <li><a class="new-header__main-nav-link" href="https://about.uq.edu.au/" class="gtm-processed">About</a></li>
+          </ul>
+        </nav>
+        <div class="new-header__black">
+          <nav class="new-header__black-nav">
+            <ul class="new-header__black-nav-list">
+                <li class="new-header__black-nav-item">
+                    <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
+                </li>
+                <li class="new-header__black-nav-item">
+                    <a href="https://www.uq.edu.au/events/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
+                </li>
+                <li class="new-header__black-nav-item">
+                    <a href="https://alumni.uq.edu.au/giving/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
+                </li>
+                <li class="new-header__black-nav-item">
+                  <a href="https://uq.edu.au/departments/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Directories'});">Directories</a>
+                </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      
     </header>
     <!-- <header class="uq-header new-header">
       <div class="uq-header__container">
